--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -74,7 +74,7 @@ input {
 }
 
 .hero {
-  background-image: url('../assets/jolteon.jpg');
+  background-image: url('../assets/all-pokemon.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -93,6 +93,40 @@ input {
   justify-content: center;
   align-items: flex-start;
   padding-left: 1rem;
+}
+
+.my-btn {
+  text-decoration: none;
+  color: white;
+  text-shadow: black 0px 1px 5px;
+  background-image: url('../assets/all-pokemon.jpg');
+  background-position: center;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  margin-inline: 20px;
+  height: 48px;
+  align-items: center;
+  justify-content: center;
+  display: inline-flex;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: x-large;
+  transition: ease .1s;
+}
+
+.my-btn:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #daff33 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.my-btn p {
+  background-color: #012b393f;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button-30 {
@@ -492,6 +526,7 @@ tbody tr:hover {
   border-radius: 1rem;
   width: 100px;
   height: 100px;
+  margin: auto;
   text-align: center;
   text-decoration: none;
   color: white;
